@@ -1,3 +1,10 @@
+globus-gridftp-server (8.2-1+gt6.@distro@) @distro@; urgency=low
+
+  * Allow test cases to run in installer build
+  * Improve test coverage
+
+ -- Globus Toolkit <support@globus.org>  Thu, 06 Aug 2015 11:11:13 -0400
+
 globus-gridftp-server (8.1-1+gt6.@distro@) @distro@; urgency=low
 
   * GT-622: GridFTP server crash with sharing group permissions
